--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MidtermGitLastname</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>MidterOrayan</title>
 </head>
 <body>
-    <p>"Hello world of git"</p>
+    <style>
+        .container {
+            border: 1px solid;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+        }
+
+    </style>
+   <div class="container" >
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Heading 1</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium itaque illum, debitis dolorem sunt, culpa earum corporis magni blanditiis dolore ad nisi totam saepe in mollitia assumenda adipisci reprehenderit est?</p>
+        </div>
+         <div class="col-md-6">
+            <h1>Heading 2</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus reiciendis ad delectus, unde vero possimus, quae totam earum maiores eaque eveniet quo eum, saepe odio repudiandae veniam nisi hic ipsum!</p>
+        </div>
+    </div>
+   </div>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
+
 </html>
